# SysSimPyPlots

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
data/: EEM_dwarf_UBVIJHK_colors_Teff.txt  cks_physical_merged.csv
docs/: requirements.txt
docs/source/: api.rst  api_compare_kepler.rst  api_compute_RVs.rst  api_general.rst  api_load_sims.rst  api_plot_catalogs.rst  api_plot_params.rst  conf.py  distances.rst  galleries.rst  histograms.rst  index.rst  installation.rst  loading.rst  occurrences.rst
examples/plot_conditional_RVs/: plot_conditional_RV_fitting_example.py  plot_conditional_RVs.py  plot_conditional_RVs_multiple.py  plot_conditional_RVs_period_radius.py  plot_conditional_underlying_period_radius.py  simulate_conditional_RVs.py
examples/plot_habitable_zone/: HZ_coefficients_downloaded.dat.txt  hzcalc.py  plot_HZ_stars.py
examples/plot_kepler_catalog/: plot_kepler_stars.py  plot_observed_kepler.py  plot_observed_kepler_split.py
examples/plot_model_params/: collect_and_plot_bboptimize.py  collect_and_plot_bboptimize_multiple_dists.py  collect_and_plot_bboptimize_split_stars.py  collect_and_plot_recomputed_distances.py  plot_extrapolate_periods.py  plot_fswp_alphaP_bprp.py  plot_fswp_bprp.py  plot_posterior_points_GP.py  (+3 more)
misc/: calculate_amd_obs.jl  write_cat_phys_obs_only.py
src/: functions_compare_kepler.py  functions_compute_RVs.py  functions_general.py  functions_load_sims.py  functions_plot_catalogs.py  functions_plot_params.py
tests/: test_compare_kepler.py  test_general.py  test_load_sims.py
(+62 files in other folders)
