[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syssimpyplots"
version = "1.0.0"
authors = [
  { name="Matthias Yang He", email="mhe@nd.edu" },
]
description = "A Python codebase for loading, analyzing, and plotting catalogs from the SysSim Clustered Planetary System Models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage"  = "https://syssimpyplots.readthedocs.io"
"Source" = "https://github.com/hematthi/SysSimPyPlots"
"Bug Tracker" = "https://github.com/hematthi/SysSimPyPlots/issues"
